--- a/storer/templates/storer/index.html
+++ b/storer/templates/storer/index.html
@@ -1,6 +1,34 @@
-<form method="GET" enctype="multipart/form-data">
-    <button name="uploadButton" value=1 type="submit" >UPLOAD</button><br>
-    <button name="updateButton" value=1 type="submit" >UPDATE</button><br>
-    <button name="deleteButton" value=1 type="submit" >DELETE</button><br>
-    <button name="downloadButton" value=1 type="submit" disabled><a href="{% url 'storer:download' %}">DOWNLOAD</a></button>
-</form>
+<head>
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <style>
+        .card{
+            /* height: 350px;
+            width: 350px; */
+            padding: 16px;
+        }
+        body{
+            padding: 25rem 46rem 25rem 45rem;
+            background-color: #F0F2FF;
+        }
+        .base-size{
+            height: 5rem;
+            width: 10rem;
+            margin: 1rem;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="mdc-card card">
+        <form method="GET" enctype="multipart/form-data">
+            <button name="uploadButton" value=1 type="submit" class="mdc-button base-size">UPLOAD</button>
+            <button name="updateButton" value=1 type="submit" class="mdc-button base-size">UPDATE</button><br>
+            <button name="deleteButton" value=1 type="submit" class="mdc-button base-size">DELETE</button>
+            <!-- <button name="downloadButton" value=1 type="submit" disabled> -->
+                <a class="mdc-button base-size" href="{% url 'storer:download' %}">DOWNLOAD</a>
+            <!-- </button> -->
+        </form>
+    </div>
+</body>
