--- a/storer/templates/storer/upload.html
+++ b/storer/templates/storer/upload.html
@@ -1,6 +1,34 @@
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    <input type="file" id="id_file" name="file" required>
-    <label for="id_file">Choose file</label>
-    <button type="submit" >Upload</button>
-</form>
+<head>
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">    
+    <style>
+            .card{
+                /* height: 350px;
+                width: 350px; */
+                padding: 16px;
+            }
+            body{
+                padding: 25rem 46rem 25rem 45rem;
+                background-color: #F0F2FF;
+            }
+            .base-size{
+                height: 5rem;
+                width: 10rem;
+                margin: 1rem;
+            }
+            /* .secondary{
+                background-color: #018786;
+            } */
+    </style>
+</head>
+<body>
+    <div class="mdc-card card">
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <input type="file" id="id_file" name="file" required hidden>
+            <label for="id_file" class="mdc-button mdc-button--outlined base-size">Choose file</label>
+            <button type="submit" class="mdc-button mdc-button--raised base-size">Upload</button>
+        </form>
+    </div>
+</body>
