--- a/storer/templates/storer/details.html
+++ b/storer/templates/storer/details.html
@@ -12,11 +12,11 @@
             padding: 18rem 46rem 18rem 45rem;
             background-color: #F0F2FF;
         }
-        .base-size{
+        /* .base-size{
             height: 5rem;
             width: 10rem;
             margin: 1rem;
-        }
+        } */
         .large-base-size{
             height: 5rem;
             width: 22rem;
@@ -24,17 +24,15 @@
         }
     </style>
 </head>
-
+    
 <body>
     <div class="mdc-card card">
-        <form method="GET" enctype="multipart/form-data">
-            <button name="uploadButton" value=1 type="submit" class="mdc-button base-size">UPLOAD</button>
-            <button name="updateButton" value=1 type="submit" class="mdc-button base-size">UPDATE</button><br>
-            <!-- <button name="deleteButton" value=1 type="submit" class="mdc-button base-size">DELETE</button> -->
-            <!-- <button name="downloadButton" value=1 type="submit" disabled> -->
-                
-            <!-- </button> -->
-            <button name="filesButton" value=1 type="submit" class="mdc-button large-base-size">FILES</button>
-        </form>
+        {{ filename }}<br>
+        <!-- <button name="deleteButton" value=1 type="submit" class="mdc-button base-size"> -->
+            <a class="mdc-button" href="{% url 'storer:delete' filename %}">DELETE</a>
+        <!-- </button> -->
+        <!-- <button name="downloadButton" value=1 type="submit" disabled> -->
+            <a class="mdc-button" href="{% url 'storer:download' filename %}">DOWNLOAD</a><br>
+        <!-- </button> -->
     </div>
 </body>
