--- a/storer/templates/storer/index.html
+++ b/storer/templates/storer/index.html
@@ -3,24 +3,24 @@
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <style>
-        .card{
-            /* height: 350px;
-            width: 350px; */
+        /* .card{
+            height: 350px;
+            width: 350px;
             padding: 16px;
-        }
+        } */
         body{
-            padding: 18rem 46rem 18rem 45rem;
+            padding: 15% 38% 15% 38%;
             background-color: #F0F2FF;
         }
         .base-size{
-            height: 5rem;
-            width: 10rem;
-            margin: 1rem;
+            height: 20%;
+            width: 39%;
+            margin: 5%;
         }
         .large-base-size{
-            height: 5rem;
-            width: 22rem;
-            margin: 1rem;
+            height: 20%;
+            width: 90%;
+            margin: 5%;
         }
     </style>
 </head>
