css changed to bootstrap

--- a/storer/templates/storer/details.html
+++ b/storer/templates/storer/details.html
@@ -1,26 +1,15 @@
 <head>
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <style>
         .card{
-            /* height: 350px;
-            width: 350px; */
             padding: 16px;
         }
         body{
             padding: 18rem 46rem 18rem 45rem;
-            background-color: #F0F2FF;
-        }
-        /* .base-size{
-            height: 5rem;
-            width: 10rem;
-            margin: 1rem;
-        } */
-        .large-base-size{
-            height: 5rem;
-            width: 22rem;
-            margin: 1rem;
+            background-color: #ceefff;
         }
         .commit{
             color: gray;
@@ -29,13 +18,13 @@
 </head>
     
 <body>
-    <div class="mdc-card card">
+    <div class="shadow-lg p-3 mb-5 bg-white rounded card">
         {{ filename }}:<div class="commit">{{ commit_message }}</div><br>
         <!-- <button name="deleteButton" value=1 type="submit" class="mdc-button base-size"> -->
-            <a class="mdc-button" href="{% url 'storer:delete' filename %}">DELETE</a>
+            <a class="btn btn-light" href="{% url 'storer:delete' filename %}">DELETE</a>
         <!-- </button> -->
         <!-- <button name="downloadButton" value=1 type="submit" disabled> -->
-            <a class="mdc-button" href="{% url 'storer:download' filename %}">DOWNLOAD</a><br>
+            <a class="btn btn-light" href="{% url 'storer:download' filename %}">DOWNLOAD</a><br>
         <!-- </button> -->
     </div>
 </body>
