--- a/storer/templates/storer/files.html
+++ b/storer/templates/storer/files.html
@@ -2,6 +2,10 @@
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <style>
         .card{
             /* height: 350px;
@@ -10,7 +14,10 @@
         }
         body{
             padding: 18rem 46rem 18rem 45rem;
-            background-color: #F0F2FF;
+            background-color: #ceefff;
+        }
+        ul {
+            list-style-type: none;
         }
         /* .commit{
             color: gray;
@@ -19,12 +26,12 @@
 </head>
 
 <body>
-    <div class="mdc-card card">
-        <ul class="mdc-list">
-            <li class="mdc-list-item">File Names</li>
+    <div class="shadow-lg p-3 mb-5 bg-white rounded card">
+        <ul class="list-group" >
+            <li class="list-group-item list-group-item-action active">File Names</li>
             {% load index %}
             {% for i in number_of_files %}
-            <a href="{% url 'storer:details' file_names|index:i %}" class="mdc-list-item">
+            <a href="{% url 'storer:details' file_names|index:i %}" class="list-group-item list-group-item-action">
                 <li>{{ file_names|index:i }} 
                     
                 </li>
