--- a/storer/templates/storer/index.html
+++ b/storer/templates/storer/index.html
@@ -1,7 +1,8 @@
 <head>
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <style>
         /* .card{
             height: 350px;
@@ -10,7 +11,7 @@
         } */
         body{
             padding: 15% 38% 15% 38%;
-            background-color: #F0F2FF;
+            background-color: #ceefff;
         }
         .base-size{
             height: 20%;
@@ -26,15 +27,15 @@
 </head>
 
 <body>
-    <div class="mdc-card card">
+    <div class="shadow-lg p-3 mb-5 bg-white rounded">
         <form method="GET" enctype="multipart/form-data">
-            <button name="uploadButton" value=1 type="submit" class="mdc-button base-size">UPLOAD</button>
-            <button name="updateButton" value=1 type="submit" class="mdc-button base-size">UPDATE</button><br>
+            <button name="uploadButton" value=1 type="submit" class="btn btn-primary base-size">UPLOAD</button>
+            <button name="updateButton" value=1 type="submit" class="btn btn-primary base-size">UPDATE</button><br>
             <!-- <button name="deleteButton" value=1 type="submit" class="mdc-button base-size">DELETE</button> -->
             <!-- <button name="downloadButton" value=1 type="submit" disabled> -->
                 
             <!-- </button> -->
-            <button name="filesButton" value=1 type="submit" class="mdc-button large-base-size">FILES</button>
+            <button name="filesButton" value=1 type="submit" class="btn btn-primary large-base-size">FILES</button>
         </form>
     </div>
 </body>
