--- a/storer/templates/storer/upload.html
+++ b/storer/templates/storer/upload.html
@@ -1,34 +1,30 @@
 <head>
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <style>
             .card{
-                /* height: 350px;
-                width: 350px; */
                 padding: 16px;
             }
             body{
                 padding: 25rem 46rem 25rem 45rem;
-                background-color: #F0F2FF;
+                background-color: #ceefff;
             }
             .base-size{
                 height: 5rem;
                 width: 10rem;
                 margin: 1rem;
             }
-            /* .secondary{
-                background-color: #018786;
-            } */
     </style>
 </head>
 <body>
-    <div class="mdc-card card">
+    <div class="shadow-lg p-3 mb-5 bg-white rounded card">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <input type="file" id="id_file" name="file" required hidden>
-            <label for="id_file" class="mdc-button mdc-button--outlined base-size">Choose file</label>
-            <button type="submit" class="mdc-button mdc-button--raised base-size">Upload</button>
+            <label for="id_file" class="btn btn-secondary base-size">Choose file</label>
+            <button type="submit" class="btn btn-primary base-size">Upload</button>
         </form>
     </div>
 </body>
