--- a/storer/templates/storer/files.html
+++ b/storer/templates/storer/files.html
@@ -1,7 +1,4 @@
 <head>
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -11,31 +8,68 @@
             /* height: 350px;
             width: 350px; */
             padding: 16px;
+            margin: 5% 22% 15% 22%;
+            opacity: 0.85;
         }
-        body{
-            padding: 18rem 46rem 18rem 45rem;
-            background-color: #ceefff;
-        }
+        /* body{
+            padding: 15% 15% 15% 15%;
+            background-image: 'backgroud.jpg';
+        } */
         ul {
             list-style-type: none;
         }
-        /* .commit{
-            color: gray;
-        } */
+        .top-card{
+            height: 15%;
+            opacity: 0.5;
+            background-color: black;
+            /* padding: 5% 0% 0% 60%;*/
+        }
+        .name{
+            float: left;
+            width: 77%
+        }
+        .top-btn{
+            height: 50%;
+            width: 10%;
+            margin: 2% 0% 2% 70%;
+        }
+        .image{
+            height: 100%;
+            width: 100%;
+        }
+        .logo{
+            height: 100%;
+            margin: 0% 0% 0% 2%;
+            /* width: 10%; */
+            opacity: 0.95;
+            float: left;
+        }
     </style>
 </head>
-
-<body>
+{% load static %}
+<body background="{% static 'storer/backgroud.jpg' %}" class="image">
+    
+    <!-- <img src="{% static 'storer/backgroud.jpg' %}" class="image"> -->
+    <div class="shadow-lg p-3 mb-5 bg-white rounded top-card">
+        <img src="{% static 'storer/logo.jpg' %}" class="logo">
+        <img src="{% static 'storer/logoname.png' %}" class="logo">
+        <div class="top-btn">
+            <a class="btn btn-dark" href="{% url 'storer:upload' %}">UPLOAD</a>
+            <a class="btn btn-primary" href="{% url 'storer:update' %}">UPDATE</a>
+        </div>
+    </div>
     <div class="shadow-lg p-3 mb-5 bg-white rounded card">
         <ul class="list-group" >
-            <li class="list-group-item list-group-item-action active">File Names</li>
+            <li class="list-group-item list-group-item-action active list-group-item-dark">File Names</li>
             {% load index %}
             {% for i in number_of_files %}
-            <a href="{% url 'storer:details' file_names|index:i %}" class="list-group-item list-group-item-action">
-                <li>{{ file_names|index:i }} 
-                    
+                <li class="list-group-item list-group-item-action">
+                    <a href="{% url 'storer:details' file_names|index:i %}" class="list-group-item-action name">
+                        {{ file_names|index:i }}
+                    </a>
+                    <a class="btn btn-light" href="{% url 'storer:delete' file_names|index:i %}">DELETE</a>
+                    <a class="btn btn-light" href="{% url 'storer:download' file_names|index:i %}">DOWNLOAD</a>
                 </li>
-            </a>
             {% endfor %}
         </ul>
     </div>
