--- a/storer/templates/storer/index.html
+++ b/storer/templates/storer/index.html
@@ -10,32 +10,51 @@
             padding: 16px;
         } */
         body{
-            padding: 15% 38% 15% 38%;
+            /* padding: 0% 0% 15% 0%; */
             background-color: #ceefff;
         }
         .base-size{
-            height: 20%;
-            width: 39%;
-            margin: 5%;
+            height: 40%;
+            width: 20%;
+            margin: 2%;
         }
         .large-base-size{
             height: 20%;
             width: 90%;
             margin: 5%;
         }
+        .top-bar{
+            height: 15%;
+            padding: 0%;
+        }
+        /* .top-buttons{
+            padding: 0% 0% 0% 20%;
+            width: 80%;
+        } */
+        .logo{
+            width: 20% ;
+            margin: 0% ;
+            float: left;
+            font-size: 400%;
+        }
     </style>
 </head>
 
 <body>
-    <div class="shadow-lg p-3 mb-5 bg-white rounded">
-        <form method="GET" enctype="multipart/form-data">
-            <button name="uploadButton" value=1 type="submit" class="btn btn-primary base-size">UPLOAD</button>
-            <button name="updateButton" value=1 type="submit" class="btn btn-primary base-size">UPDATE</button><br>
-            <!-- <button name="deleteButton" value=1 type="submit" class="mdc-button base-size">DELETE</button> -->
-            <!-- <button name="downloadButton" value=1 type="submit" disabled> -->
-                
-            <!-- </button> -->
-            <button name="filesButton" value=1 type="submit" class="btn btn-primary large-base-size">FILES</button>
-        </form>
+    <div class="shadow-lg p-3 mb-5 bg-white rounded top-bar">
+        <div class="logo">
+            My Drive
+        </div>
+        <div class="top-buttons">
+            <form method="GET" enctype="multipart/form-data">
+                <button name="uploadButton" value=1 type="submit" class="btn btn-primary base-size">UPLOAD</button>
+                <button name="updateButton" value=1 type="submit" class="btn btn-primary base-size">UPDATE</button>
+                <!-- <button name="deleteButton" value=1 type="submit" class="mdc-button base-size">DELETE</button> -->
+                <!-- <button name="downloadButton" value=1 type="submit" disabled> -->
+                    
+                <!-- </button> -->
+                <!-- <button name="filesButton" value=1 type="submit" class="btn btn-primary base-size">FILES</button> -->
+            </form>
+        </div>
     </div>
 </body>
