--- a/storer/templates/storer/upload.html
+++ b/storer/templates/storer/upload.html
@@ -26,5 +26,11 @@
             <label for="id_file" class="btn btn-secondary base-size">Choose file</label>
             <button type="submit" class="btn btn-primary base-size">Upload</button>
         </form>
+        <div class="alert alert-{{ success_danger }} alert-dismissible fade show" role="alert" {{ hidden_prop }}>
+            <strong>{{ status }}!</strong> File used:{{ filename }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
     </div>
 </body>
